--- a/index.html
+++ b/index.html
@@ -11,17 +11,26 @@
 <h1 class="header">Perfect Pizza</h1>
 
 <div class="pizza small"><h2>Small Pizza <div><img src="pizza5.gif" width="100mm" </div></h2>
-    R42
+    R42 
+    <div>
+       m  
+    </div>
     <div>Small margeritha pizza with 3 toppings max. 2 or less meat toppings. 3 or less other toppings</div></div>
 
 
 <div class="pizza medium"><h2>Medium Pizza <div><img src="pizza5.gif" width="150mm"></div></h2>
     R85
+    <div>
+         
+    </div>
     <div>Medium margeritha pizza with 3 toppings max. 2 or less meat toppings. 3 or less other toppings</div></div>
 
 
 <div class="pizza large"><h2>Large Pizza <div><img src="pizza5.gif" width="200"></div> </h2>
     R110
+    <div> 
+
+    </div>
     <div>Large margeritha pizza with 3 toppings max. 2 or less meat toppings. 3 or less other toppings.</div></div>
 
 
