--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <h1 class="header">Perfect Pizza</h1>
 
-<div class="pizza small"><h2>Small Pizza <div><img src="pizza5.gif" width="50mm" </div></h2>
+<div class="pizza block small"><h2>Small Pizza <div><img src="pizza5.gif" width="50mm" </div></h2>
     R42 
     <div>
        &nbsp;     
@@ -18,7 +18,7 @@
     <div>Small margeritha pizza with 3 toppings max. 2 or less meat toppings. 3 or less other toppings</div></div>
 
 
-<div class="pizza medium"><h2>Medium Pizza <div><img src="pizza5.gif" width="80mm"></div></h2>
+<div class="pizza block medium"><h2>Medium Pizza <div><img src="pizza5.gif" width="80mm"></div></h2>
     R85
     <div>
       &nbsp;     
@@ -26,7 +26,7 @@
     <div>Medium margeritha pizza with 3 toppings max. 2 or less meat toppings. 3 or less other toppings</div></div>
 
 
-<div class="pizza large"><h2>Large Pizza <div><img src="pizza5.gif" width="100mm"></div> </h2>
+<div class="pizza block large"><h2>Large Pizza <div><img src="pizza5.gif" width="100mm"></div> </h2>
     R110
     <div> 
        &nbsp;   
